--- a/html/trang-chu.html
+++ b/html/trang-chu.html
@@ -44,7 +44,7 @@
                  <ul>
                   <li class="aaaaa_1678864704">
                     <a
-                     href="index.html"
+                     href="../index.html"
                      data-url="lien-he"
                      >Thành viên</a
                     >
@@ -831,7 +831,7 @@
            <li>
             <a
              class="font fl-15 fp-14"
-             href="index.html"
+             href="../index.html"
              >Thành viên thực hiện</a
             >
            </li>
