--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="v-distable">
            <div class="table-w-auto">
             <div class="pop-logo header-logo font tcenter">
-             <a href="trang-chu.html"
+             <a href="./html/trang-chu.html"
               ><div>
                <p class="header-logo-text">Korean<br>Food</p>
               </div>
@@ -51,35 +51,35 @@
                        </li>
                   <li class="DwrRP_1579273461">
                    <a
-                    href="trang-chu.html"
+                    href="./html/trang-chu.html"
                     data-url="trang-chu"
                     >Trang chủ</a
                    >
                   </li>
                   <li class="EsRbb_1598410864">
                    <a
-                    href="thuc-don.html"
+                    href="./html/thuc-don.html"
                     data-url="thuc-don"
                     >Thực đơn</a
                    >
                   </li>
                   <li class="EWbmD_1598410888">
                    <a
-                    href="tin-tuc.html"
+                    href="./html/tin-tuc.html"
                     data-url="tin-tuc"
                     >Tin tức</a
                    >
                   </li>
                   <li class="MurAs_1598410898">
                    <a
-                    href="tuyen-dung.html"
+                    href="./html/tuyen-dung.html"
                     data-url="tuyen-dung"
                     >Tuyển dụng</a
                    >
                   </li>
                   <li class="aaaaa_1678864704">
                    <a
-                    href="lien-he.html"
+                    href="./html/lien-he.html"
                     data-url="lien-he"
                     >Liên hệ</a
                    >
@@ -155,7 +155,7 @@
               <div class="title">
                <div class="pad ptl-10 pbl-10">
                 <p class="mar mtl-30 mbl-10 font fl-18">
-                 <a href="trang-chu.html"
+                 <a href="./html/trang-chu.html"
                   ><i class="fa-solid fa-house" style="color: #bbbbbb;"></i></a
                  >
                  <a><span> / </span>Thành viên</a>
@@ -220,77 +220,77 @@
            <li>
             <a
              class="font fl-15 fp-14"
-             href="thuc-don.html"
+             href="./html/thuc-don.html"
              >Tokbokki Sốt Hàn Quốc Cay Ngon</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="thuc-don.html"
+             href="./html/thuc-don.html"
              >Kimbab Cuộn Rong Biển</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="thuc-don.html"
+             href="./html/thuc-don.html"
              >Salad Trộn Đa Loại Rau Củ</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="thuc-don.html"
+             href="./html/thuc-don.html"
              >Thịt Nướng Cay và Không Cay</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="thuc-don.html"
+             href="./html/thuc-don.html"
              >Cơm Trộn Hạt Gạo Nhật Dẻo Thơm</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="thuc-don.html"
+             href="./html/thuc-don.html"
              >Gà Sốt Đủ Vị Chua Cay</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="thuc-don.html"
+             href="./html/thuc-don.html"
              >Miến Mì Trộn</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="thuc-don.html"
+             href="./html/thuc-don.html"
              >Canh Kèm Cơm/Miến</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="thuc-don.html"
+             href="./html/thuc-don.html"
              >Mì Cay Đủ Cấp Độ</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="thuc-don.html"
+             href="./html/thuc-don.html"
              >Khay Phô Mai Kéo Sợi</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="thuc-don.html"
+             href="./html/thuc-don.html"
              >Lẩu Đa Vị</a
             >
            </li>
@@ -308,35 +308,35 @@
            <li>
             <a
              class="font fl-15 fp-14"
-             href="trang-chu.html"
+             href="./html/trang-chu.html"
              >Korean Food</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="thuc-don.html"
+             href="./html/thuc-don.html"
              >Thực đơn phong phú</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="tin-tuc.html"
+             href="./html/tin-tuc.html"
              >Tin tức chương trình</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="tuyen-dung.html"
+             href="./html/tuyen-dung.html"
              >Tuyển dụng nhân sự</a
             >
            </li>
            <li>
             <a
              class="font fl-15 fp-14"
-             href="lien-he.html"
+             href="./html/lien-he.html"
              >Hỗ trợ thực khách</a
             >
            </li>
