--- a/html/lien-he.html
+++ b/html/lien-he.html
@@ -48,7 +48,7 @@
                    <ul>
                     <li class="aaaaa_1678864704">
                       <a
-                       href="index.html"
+                       href="../index.html"
                        data-url="lien-he"
                        >Thành viên</a
                       >
@@ -581,7 +581,7 @@
            <li>
             <a
              class="font fl-15 fp-14"
-             href="index.html"
+             href="../index.html"
              >Thành viên thực hiện</a
             >
            </li>
