--- a/html/thuc-don.html
+++ b/html/thuc-don.html
@@ -46,7 +46,7 @@
                   </li>
                   <li class="aaaaa_1678864704">
                     <a
-                     href="index.html"
+                     href="../index.html"
                      data-url="lien-he"
                      >Thành viên</a
                     >
@@ -1357,7 +1357,7 @@
            <li>
             <a
              class="font fl-15 fp-14"
-             href="index.html"
+             href="../index.html"
              >Thành viên thực hiện</a
             >
            </li>
