--- a/html/tuyen-dung.html
+++ b/html/tuyen-dung.html
@@ -49,7 +49,7 @@
                   </li>
                   <li class="aaaaa_1678864704">
                     <a
-                     href="index.html"
+                     href="../index.html"
                      data-url="lien-he"
                      >Thành viên</a
                     >
@@ -560,7 +560,7 @@
            <li>
             <a
              class="font fl-15 fp-14"
-             href="index.html"
+             href="../index.html"
              >Thành viên thực hiện</a
             >
            </li>
