--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   />
   <script src="https://kit.fontawesome.com/86503a5f06.js" crossorigin="anonymous"></script>
 
-<link rel="styleSheet" href="../css/style.css">
+<link rel="styleSheet" href="./css/style.css">
  </head>
  <body>
   <div class="web-main-content">
