--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link
    type="image/x-icon"
    rel="shortcut icon"
-   href="../webs_image/uploads/website/Logo2.png"
+   href="./webs_image/uploads/website/Logo2.png"
   />
   <script src="https://kit.fontawesome.com/86503a5f06.js" crossorigin="anonymous"></script>
 
@@ -174,7 +174,7 @@
     <div class="gioithieu-team">
         <div class="gioithieu-tran">
             <div class="gioithieu-tran-img">
-                <img src="../webs_image/uploads/team/tran.jpg" alt="" class="gioithieu-tran-image">
+                <img src="./webs_image/uploads/team/tran.jpg" alt="" class="gioithieu-tran-image">
             </div>
             <div class="gioithieu-content">
                 <p class="gioithieu-text">
@@ -187,7 +187,7 @@
 
         <div class="gioithieu-hao">
             <div class="gioithieu-hao-img">
-                <img src="../webs_image/uploads/team/hao.jpg" alt="" class="gioithieu-hao-image">
+                <img src="./webs_image/uploads/team/hao.jpg" alt="" class="gioithieu-hao-image">
             </div>
             <div class="gioithieu-content">
                 <p class="gioithieu-text">
